--- a/app/src/main/res/layout/activity_listar_alarmas.xml
+++ b/app/src/main/res/layout/activity_listar_alarmas.xml
@@ -3,7 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/listar_alarmas1"
+    android:id="@+id/listar_alarmas"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
