--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <!-- Auto layout, variables, and unit scale are not yet supported -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Auto layout, variables, and unit scale are not yet supported -->
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/app_sleep"
-            android:layout_width="wrap_content"
-            android:layout_height="59dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="84dp"
-            android:layout_marginTop="81dp"
-            android:fontFamily="@font/roboto_condensed_light"
-            android:gravity="top"
-            android:lineSpacingExtra="-40sp"
-            android:text="@string/app_sleep"
-            android:textAppearance="@style/app_sleep" />
+    <TextView
+        android:id="@+id/app_sleep"
+        android:layout_width="wrap_content"
+        android:layout_height="59dp"
+
+        android:layout_marginTop="81dp"
+        android:fontFamily="@font/roboto_condensed_light"
+        android:gravity="top"
+        android:lineSpacingExtra="-40sp"
+        android:text="@string/app_sleep"
+        android:textAppearance="@style/app_sleep"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usuarioOutlinedTextField"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/usuario"
-            android:layout_marginTop="500px"
+            android:layout_marginTop="300dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="60dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -38,12 +43,15 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordOutlinedTextField"
-        android:layout_width="300dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/password"
-        android:layout_marginTop="700px"
         android:layout_centerHorizontal="true"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="25dp"
+        android:hint="@string/password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usuarioOutlinedTextField">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -55,53 +63,63 @@
         android:id="@+id/containedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/botonIngresar"
-        android:layout_marginTop="450dp"
         android:layout_centerHorizontal="true"
-        app:cornerRadius="10dp"
+        android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="30dp"
+        android:onClick="openListarAlarmasActivity"
+        android:text="@string/botonIngresar"
         app:backgroundTint="#084F92"
-        />
+        app:cornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordOutlinedTextField" />
 
     <TextView
         android:id="@+id/olvido_su_c"
-        android:layout_width="232dp"
-        android:layout_height="34dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="65dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="526dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="60dp"
+        android:gravity="top"
+        android:lineSpacingExtra="0sp"
+        android:onClick="olvidoSuclaveActivity"
         android:text="@string/olvido_su_c"
         android:textAppearance="@style/olvido_su_c"
-        android:lineSpacingExtra="0sp"
-        android:gravity="top"
-        android:onClick="olvidoSuclaveActivity"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/containedButton" />
+
     <TextView
         android:id="@+id/eres_un_usu"
-        android:layout_width="232dp"
-        android:layout_height="34dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="66dp"
+        android:layout_marginStart="60dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="563dp"
+        android:layout_marginTop="15dp"
         android:text="@string/eres_un_usu"
         android:textAppearance="@style/eres_un_usu"
         android:lineSpacingExtra="0sp"
         android:gravity="top"
         android:onClick="abrirRegistrarActivity"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/olvido_su_c"
         />
     <TextView
         android:id="@+id/cambiar_con"
-        android:layout_width="232dp"
-        android:layout_height="34dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="65dp"
+        android:layout_marginStart="60dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="600dp"
+        android:layout_marginTop="15dp"
         android:text="@string/cambiar_con"
         android:textAppearance="@style/cambiar_con"
         android:lineSpacingExtra="0sp"
         android:gravity="top"
         android:onClick="cambiarContrasenaActivity"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/eres_un_usu"
         />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
