--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="app_sleep">
         <item name="android:textSize">48sp</item>
         <item name="android:letterSpacing">0.03</item>
@@ -23,5 +22,44 @@
         <item name="android:textSize">14sp</item>
         <item name="android:letterSpacing">0.09</item>
         <item name="android:textColor">#084F92</item>
+    </style>
+
+    <style name="time">
+        <item name="android:textSize">40sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="am">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="diario">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="lista_de_al">
+        <item name="android:textSize">24sp</item>
+        <item name="android:letterSpacing">0.05</item>
+        <item name="android:textColor">#084F92</item>
+    </style>
+
+    <style name="label">
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.09</item>
+        <item name="android:textColor">#084F92</item>
+    </style>
+
+    <style name="label1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.09</item>
+        <item name="android:textColor">#084F92</item>
+    </style>
+
+    <style name="body">
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.02</item>
+        <item name="android:textColor">#83A7C8</item>
     </style>
 </resources>
